--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
     <link href="css/portrait.css" rel="stylesheet" media="orientation:portrait">
     <link href="css/print.css" rel="stylesheet" media="print">
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
   <body>
